# battle_beetles

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  log.md  todo.md
protos/: messages.proto
src/: beetle.rs  beetle_genome.rs  display.rs  entities.rs  experiment.rs  food_collector.rs  game.rs  main.rs  message_handler.rs  simulation.rs  ui.rs  utils.rs
src/simulation/: battle_ga.rs  battle_simulation.rs  fight_simulation.rs  food_ga.rs  mod.rs  speed_ga.rs  speed_simulation.rs
ui/: index.html  index.js  message_service.js  package-lock.json  package.json
ui/src/: charts.js  index.js  message_service.js  utils.js
