[package]
name = "battle_beetles"
version = "0.1.0"
authors = ["Anders Pitman <tapitman11@gmail.com>"]

[dependencies]
websocket = "0.20.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cgmath = {version = "0.16", features = ["serde"]}
rand = "0.4"
protobuf = "1.4"
rouille = "2.1.0"

[build-dependencies]
protoc-rust = "1.4"
